Updating the stakeholder option

--- a/app/widget.html
+++ b/app/widget.html
@@ -46,7 +46,7 @@
                         <option value="Director">Director</option>
                         <option value="Shareholder">Shareholder</option>
                         <option value="UBO">UBO</option>
-                        <option value="Authorized Person">Authorized Person</option>
+                        <option value="Authorized Person (for legal person)">Authorized Person (for legal person)</option>
                         <option value="Power of Attorney">Power of Attorney</option>
                     </select>
 
