add validation to check if the app contains natural person

--- a/app/widget.html
+++ b/app/widget.html
@@ -83,7 +83,7 @@
 
                 <div class="popup-overlay hidden" id="popup">
                     <div class="popup-content">
-                      <button class="close-button" onclick="hidePopup()">×</button>
+                      <button class="close-button" onclick="hidePopup()"></button>
                       <h3 id="popupTitle">Action Status</h3>
                       <p id="popupMessage">Default message</p>
                     </div>
