--- a/app/widget.html
+++ b/app/widget.html
@@ -50,9 +50,20 @@
                           <div data-value="UBO">UBO</div>
                           <div data-value="Authorized Person (for legal person)">Authorized Person (for legal person)</div>
                           <div data-value="Power of Attorney">Power of Attorney</div>
+                          <div data-value="Head Office">Head Office</div>
+                          
+                          <div data-value="2nd Layer_shareholders">2nd Layer_shareholders</div>
+                          <div data-value="2nd Layer_UBO">2nd Layer_UBO</div>
+                          <div data-value="3rd Layer_shareholders">3rd Layer_shareholders</div>
+                          <div data-value="3rd Layer_UBO">3rd Layer_UBO</div>
+                          <div data-value="4th Layer_shareholders">4th Layer_shareholders</div>
+                          <div data-value="4th Layer_UBO">4th Layer_UBO</div>
+                          <div data-value="2nd Layer_Authorized Person">2nd Layer_Authorized Person</div>
+                          <div data-value="3rd Layer_Authorized Person">3rd Layer_Authorized Person</div>
+                          <div data-value="4th Layer_Authorized Person">4th Layer_Authorized Person</div>
                         </div>
                         <input type="hidden" id="role-values" name="role-values" value="" />
-                      </div>
+                    </div>
 
                     <div id="shares-container" style="display: none;">
                         <label for="number-of-shares">Number of Shares <span class="mandatory">*</span></label>
@@ -68,11 +79,44 @@
                     <label for="registered-name">Registered Name <span class="mandatory">*</span></label>
                     <input type="text" id="registered-name" name="registered-name" required>
 
+
+                    <!-- <label for="legal-stakeholder-role">Stakeholder Role <span class="mandatory">*</span></label>
+                    <div class="custom-multiselect">
+                    <div id="selected-options"></div>
+                    <input type="text" id="legal-selected-options" placeholder="Select roles..." readonly />
+                        <div id="legal-options-list" class="options">
+                            <div data-value="Secretary">Secretary</div>
+                            <div data-value="2nd Layer_shareholders">2nd Layer_shareholders</div>
+                            <div data-value="3rd Layer_shareholders">3rd Layer_shareholders</div>
+                            <div data-value="4th Layer_shareholders">4th Layer_shareholders</div>
+                        </div>
+                        <input type="hidden" id="legal-role-values" name="role-values" value="" />
+                    </div> -->
+
+                    <!-- Inside #legal-person-form -->
                     <label for="legal-stakeholder-role">Stakeholder Role <span class="mandatory">*</span></label>
+                    <div class="custom-multiselect">
+                    <div id="legal-selected-options"></div>
+                    <input type="text" id="legal-role-input" placeholder="Select roles..." />
+                    <div id="legal-options-list" class="options">
+                        <div data-value="Shareholder">Shareholder</div>
+                        <div data-value="2nd Layer_shareholders">2nd Layer_shareholders</div>
+                        <div data-value="3rd Layer_shareholders">3rd Layer_shareholders</div>
+                        <div data-value="4th Layer_shareholders">4th Layer_shareholders</div>
+                    </div>
+                    <input type="hidden" id="legal-role-values" name="role-values" value="" />
+                    </div>
+
+
+                    <!-- <label for="legal-stakeholder-role">Stakeholder Role <span class="mandatory">*</span></label>
                     <select id="legal-stakeholder-role" name="legal-stakeholder-role" required onchange="toggleSharesField()">
                         <option value="" disabled selected>Select an option</option>
                         <option value="Shareholder">Shareholder</option>
-                    </select>
+                        <option value="2nd Layer_shareholders">2nd Layer_shareholders</option>
+                        <option value="3rd Layer_shareholders">3rd Layer_shareholders</option>
+                        <option value="4th Layer_shareholders">4th Layer_shareholders</option>
+                    </select> -->
+                    
 
                     <label for="legal-number-of-shares">Number of Shares <span class="mandatory">*</span></label>
                     <input type="number" id="legal-number-of-shares" name="legal-number-of-shares" required>
