added readonly for legal person

--- a/app/widget.html
+++ b/app/widget.html
@@ -83,7 +83,7 @@
                     <label for="legal-stakeholder-role">Stakeholder Role <span class="mandatory">*</span></label>
                     <div class="custom-multiselect">
                     <div id="legal-selected-options"></div>
-                    <input type="text" id="legal-role-input" placeholder="Select roles..." />
+                    <input type="text" id="legal-role-input" placeholder="Select roles..." readonly/>
                     <div id="legal-options-list" class="options">
                         <div data-value="Shareholder">Shareholder</div>
                         <div data-value="2nd Layer_shareholders">2nd Layer_shareholders</div>
