--- a/app/widget.html
+++ b/app/widget.html
@@ -51,13 +51,15 @@
                           <div data-value="Authorized Person (for legal person)">Authorized Person (for legal person)</div>
                           <div data-value="Power of Attorney">Power of Attorney</div>
                           <div data-value="Head Office">Head Office</div>
-                          
                           <div data-value="2nd Layer_shareholders">2nd Layer_shareholders</div>
                           <div data-value="2nd Layer_UBO">2nd Layer_UBO</div>
+                          <div data-value="2nd Layer_Stakeholders">2nd Layer_Stakeholders</div>
                           <div data-value="3rd Layer_shareholders">3rd Layer_shareholders</div>
                           <div data-value="3rd Layer_UBO">3rd Layer_UBO</div>
+                          <div data-value="3rd Layer_Stakeholders">3rd Layer_Stakeholders</div>
                           <div data-value="4th Layer_shareholders">4th Layer_shareholders</div>
                           <div data-value="4th Layer_UBO">4th Layer_UBO</div>
+                          <div data-value="4th Layer_Stakeholders">4th Layer_Stakeholders</div>
                           <div data-value="2nd Layer_Authorized Person">2nd Layer_Authorized Person</div>
                           <div data-value="3rd Layer_Authorized Person">3rd Layer_Authorized Person</div>
                           <div data-value="4th Layer_Authorized Person">4th Layer_Authorized Person</div>
